Move metal-core to ghcr.

--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -11,11 +11,19 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
     - name: Build and push Docker image
       run: |
-        docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker build -t metalstack/metal-core .
-        docker push metalstack/metal-core
+        docker build -t ghcr.io/metal-stack/metal-core .
+        docker push ghcr.io/metal-stack/metal-core
+
     - uses: release-drafter/release-drafter@v5
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
