--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -11,12 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
-    - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/}
+      uses: actions/checkout@v2
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
     - name: Build the Docker images
       run: |
         export GITHUB_TAG_NAME=${GITHUB_REF##*/}
-        docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker build -t metalstack/metal-core:${GITHUB_TAG_NAME} .
-        docker push metalstack/metal-core:${GITHUB_TAG_NAME}
+        docker build -t ghcr.io/metal-stack/metal-core:${GITHUB_TAG_NAME} .
+        docker push ghcr.io/metal-stack/metal-core:${GITHUB_TAG_NAME}
