--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,9 +11,28 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Build and push Docker image
+
+    - name: Figure out if running fork PR
+      id: fork
+      run: '["${{ secrets.DOCKER_REGISTRY_TOKEN }}" == ""] && echo "::set-output name=is_fork_pr::true" || echo "::set-output name=is_fork_pr::false"'
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+      if: steps.fork.outputs.is_fork_pr == 'false'
+
+    - name: Build Docker image
       run: |
-        docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
         # pull request images are prefixed with 'pr' to prevent them from overriding released images
-        docker build -t metalstack/metal-core:pr-${GITHUB_HEAD_REF##*/} .
-        docker push metalstack/metal-core:pr-${GITHUB_HEAD_REF##*/}
+        docker build -t ghcr.io/metal-stack/metal-core:pr-${GITHUB_HEAD_REF##*/} .
+        docker push ghcr.io/metal-stack/metal-core:pr-${GITHUB_HEAD_REF##*/}
+
+    - name: Push Docker image
+      run: |
+        # pull request images are prefixed with 'pr' to prevent them from overriding released images
+        docker build -t ghcr.io/metal-stack/metal-core:pr-${GITHUB_HEAD_REF##*/} .
+        docker push ghcr.io/metal-stack/metal-core:pr-${GITHUB_HEAD_REF##*/}
+      if: steps.fork.outputs.is_fork_pr == 'false'
