--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Docker Login
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        username: ${{ secrets.DOCKER_REGISTRY_USER }}
+        password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+
     - name: Build and push Docker image
       run: |
-        docker login -u metalstackci -p ${{ secrets.DOCKER_HUB_TOKEN }}
-        docker build -t metalstack/metal-core:${GITHUB_REF##*/} .
-        docker push metalstack/metal-core:${GITHUB_REF##*/}
+        docker build -t ghcr.io/metal-stack/metal-core:${GITHUB_REF##*/} .
+        docker push ghcr.io/metal-stack/metal-core:${GITHUB_REF##*/}
