--- a/internal/switcher/test_data/dev/frr.conf
+++ b/internal/switcher/test_data/dev/frr.conf
@@ -92,8 +92,19 @@ router bgp 4200000010 vrf vrf104001
   neighbor MACHINE route-map vrf104001-in in
  exit-address-family
  !
+ address-family ipv6 unicast
+  redistribute connected
+  neighbor MACHINE maximum-prefix 24000
+  neighbor MACHINE activate
+# TODO: ipv6 route-map actually does not allow any ipv6 traffic.
+#
+#  neighbor MACHINE route-map vrf104001-in in
+#
+ exit-address-family
+ !
  address-family l2vpn evpn
   advertise ipv4 unicast
+  advertise ipv6 unicast
  exit-address-family
 !
 # route-maps for vrf104001
