--- a/internal/switcher/test_data/lab/frr.conf
+++ b/internal/switcher/test_data/lab/frr.conf
@@ -96,10 +96,7 @@ router bgp 4200000010 vrf vrf104001
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
   neighbor MACHINE activate
-# TODO: ipv6 route-map actually does not allow any ipv6 traffic.
-#
-#  neighbor MACHINE route-map vrf104001-in in
-#
+  neighbor MACHINE route-map vrf104001-in6 in
  exit-address-family
  !
  address-family l2vpn evpn
