--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -35,6 +35,12 @@ router bgp 4200000010
   neighbor FIREWALL allowas-in 1
  exit-address-family
  !
+ address-family ipv6 unicast
+  redistribute connected route-map LOOPBACKS
+  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL activate
+ exit-address-family
+ !
  address-family l2vpn evpn
   advertise-all-vni
   neighbor FABRIC activate
