--- a/internal/switcher/test_data/dev/frr.conf
+++ b/internal/switcher/test_data/dev/frr.conf
@@ -53,6 +53,13 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
+ address-family ipv6 unicast
+  redistribute connected route-map LOOPBACKS
+  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL activate
+  neighbor swp3 route-map fw-swp3-in in
+ exit-address-family
+ !
  address-family l2vpn evpn
   advertise-all-vni
   neighbor FABRIC activate
@@ -108,7 +115,7 @@ router bgp 4200000010 vrf vrf104001
 ip prefix-list vrf104001-in-prefixes seq 10 permit 100.127.131.0/24 le 32
 ip prefix-list vrf104001-in-prefixes seq 11 permit 212.17.234.17/32 le 32
 ip prefix-list vrf104001-in-prefixes seq 12 permit 10.244.0.0/16 le 32
-ip prefix-list vrf104001-in6-prefixes seq 10 permit 2002::1/128 le 128
+ipv6 prefix-list vrf104001-in6-prefixes seq 10 permit 2002::1/128 le 128
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
 route-map vrf104001-in6 permit 10
