--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Lint
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: v1.32.2
+        args: -p bugs -p unused
+
     - name: Docker Login
       uses: docker/login-action@v1
       with:
