--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: golangci/golangci-lint-action@v2
       with:
         version: v1.32.2
-        args: -p bugs -p unused
+        args: -p bugs
 
     - name: Docker Login
       uses: docker/login-action@v1
