Allow 2 occurences of own AS in path to account for paths involving DMZ firewalls

--- a/internal/switcher/test_data/customtpl/frr.conf
+++ b/internal/switcher/test_data/customtpl/frr.conf
@@ -49,15 +49,16 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map LOCALS
-  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise-all-vni
   neighbor FABRIC activate
+  neighbor FABRIC allowas-in 2
   neighbor FIREWALL activate
-  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
