--- a/internal/switcher/test_data/notenants/frr.conf
+++ b/internal/switcher/test_data/notenants/frr.conf
@@ -32,14 +32,15 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map LOOPBACKS
-  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL allowas-in 2
  exit-address-family
  !
  address-family l2vpn evpn
   advertise-all-vni
   neighbor FABRIC activate
+  neighbor FABRIC allowas-in 2
   neighbor FIREWALL activate
-  neighbor FIREWALL allowas-in 1
+  neighbor FIREWALL allowas-in 2
  exit-address-family
 !
 route-map LOOPBACKS permit 10
