Do not generate sequence numbers in prefix list to prevent route churn on every changed prefix

--- a/internal/switcher/test_data/dev/frr.conf
+++ b/internal/switcher/test_data/dev/frr.conf
@@ -66,7 +66,7 @@ route-map LOOPBACKS permit 10
  match interface lo
 !
 # route-maps for firewall@swp3
-ip prefix-list fw-swp3-in-prefixes seq 10 permit 10.0.2.1/32 le 32
+ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
 route-map fw-swp3-in permit 10
  match ip address prefix-list fw-swp3-in-prefixes
 route-map fw-swp3-vni permit 10
@@ -98,9 +98,9 @@ router bgp 4200000010 vrf vrf104001
  exit-address-family
 !
 # route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes seq 10 permit 100.127.131.0/24 le 32
-ip prefix-list vrf104001-in-prefixes seq 11 permit 212.17.234.17/32 le 32
-ip prefix-list vrf104001-in-prefixes seq 12 permit 10.244.0.0/16 le 32
+ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
+ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
+ip prefix-list vrf104001-in-prefixes permit 10.244.0.0/16 le 32
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
 !
