--- a/internal/switcher/test_data/customtpl/frr.conf
+++ b/internal/switcher/test_data/customtpl/frr.conf
@@ -69,7 +69,7 @@ route-map LOCALS permit 12
  match interface vlan4000
 !
 # route-maps for firewall@swp3
-ip prefix-list fw-swp3-in-prefixes seq 10 permit 10.0.2.1/32 le 32
+ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
 route-map fw-swp3-in permit 10
  match ip address prefix-list fw-swp3-in-prefixes
 route-map fw-swp3-vni permit 10
@@ -99,9 +99,9 @@ router bgp 4200000010 vrf vrf104001
  exit-address-family
 !
 # route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes seq 10 permit 100.127.131.0/24 le 32
-ip prefix-list vrf104001-in-prefixes seq 11 permit 212.17.234.17/32 le 32
-ip prefix-list vrf104001-in-prefixes seq 12 permit 10.244.0.0/16 le 32
+ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
+ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
+ip prefix-list vrf104001-in-prefixes permit 10.244.0.0/16 le 32
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
 !
