--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -37,7 +37,7 @@ router bgp 4200000010
  exit-address-family
 !
 route-map LOOPBACKS permit 10
- match interface lo
+ match interface Loopback0
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
