--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -44,7 +44,7 @@ router bgp 4200000010
  exit-address-family
 !
 route-map LOOPBACKS permit 10
- match interface lo
+ match interface Loopback0
 !
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
