--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -11,7 +11,7 @@ debug bgp nht
 debug bgp update-groups
 debug bgp zebra
 !
-vrf vrf104001
+vrf Vrf104001
  vni 104001
  exit-vrf
 !
@@ -59,7 +59,7 @@ route-map fw-swp3-vni permit 12
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
-router bgp 4200000010 vrf vrf104001
+router bgp 4200000010 vrf Vrf104001
  bgp router-id 10.0.0.10
  bgp bestpath as-path multipath-relax
  neighbor MACHINE peer-group
@@ -71,17 +71,17 @@ router bgp 4200000010 vrf vrf104001
  address-family ipv4 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
-  neighbor MACHINE route-map vrf104001-in in
+  neighbor MACHINE route-map Vrf104001-in in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
  exit-address-family
 !
-# route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes permit 10.244.0.0/16 le 32
-route-map vrf104001-in permit 10
- match ip address prefix-list vrf104001-in-prefixes
+# route-maps for Vrf104001
+ip prefix-list Vrf104001-in-prefixes permit 10.244.0.0/16 le 32
+route-map Vrf104001-in permit 10
+ match ip address prefix-list Vrf104001-in-prefixes
 !
 line vty
 !
