--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -12,6 +12,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        args: --build-tags -p bugs -p unused --timeout=3m
+
     - name: Docker Login
       uses: docker/login-action@v1
       with:
