--- a/.github/workflows/latest.yaml
+++ b/.github/workflows/latest.yaml
@@ -12,6 +12,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Set up Go 1.19
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.19
+      id: go
+
     - name: Lint
       uses: golangci/golangci-lint-action@v3
       with:
