--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Lint
       uses: golangci/golangci-lint-action@v3
       with:
-        args: --build-tags -p bugs -p unused --timeout=3m
+        args: -p bugs -p unused --timeout=3m
 
     - name: Docker Login
       uses: docker/login-action@v1
