--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -35,12 +35,14 @@ jobs:
       with:
         go-version: '1.20.x'
 
+    - name: build
+      run: |
+        make
+
     - name: Lint
       uses: golangci/golangci-lint-action@v3
       with:
         args: --build-tags client -p bugs -p unused --timeout=3m
-        skip-cache: true
-
 
     - name: Make tag
       run: |
