--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -35,6 +35,9 @@ jobs:
       with:
         go-version: '1.20.x'
 
+    - name: Install libpcap-dev
+      run: sudo apt-get install -y libpcap-dev
+
     - name: build
       run: |
         make
