--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -10,6 +10,8 @@ debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
+debug zebra kernel
+debug zebra rib detail
 !
 vrf Vrf104001
  vni 104001
