--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -46,6 +46,13 @@ router bgp 4200000010
 route-map LOOPBACKS permit 10
  match interface Loopback0
 !
+# BEGIN: bfgcfg
+route-map RM_SET_SRC permit 10
+ set src 10.0.0.10
+!
+ip protocol bgp route-map RM_SET_SRC
+!
+# END
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
 route-map fw-swp3-in permit 10
