zebra timer for nexthop-groups

--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -10,6 +10,7 @@ debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
+zebra nexthop-group keep 1
 !
 router bgp 4200000010
  bgp router-id 10.0.0.10
