--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -10,6 +10,7 @@ debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
+zebra nexthop-group keep 1
 !
 vrf Vrf104001
  vni 104001
