debug options for zebra and removed nexthop group keep timer because it does not work in frr 8.1

--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -10,7 +10,10 @@ debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
-zebra nexthop-group keep 1
+debug zebra events
+debug zebra nexthop detailed
+debug zebra rib detailed
+debug zebra nht detailed
 !
 router bgp 4200000010
  bgp router-id 10.0.0.10
