--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -10,7 +10,10 @@ debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
-zebra nexthop-group keep 1
+debug zebra events
+debug zebra nexthop detailed
+debug zebra rib detailed
+debug zebra nht detailed
 !
 vrf Vrf104001
  vni 104001
