--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -11,7 +11,7 @@ debug bgp nht
 debug bgp update-groups
 debug bgp zebra
 debug zebra events
-debug zebra nexthop detailed
+debug zebra nexthop detail
 debug zebra rib detailed
 debug zebra nht detailed
 !
