configure interface in frr on sonic

--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -19,6 +19,26 @@ vrf Vrf104001
  vni 104001
  exit-vrf
 !
+interface swp31
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
+interface swp32
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
+interface swp3
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
+interface swp1 vrf Vrf104001
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
+interface swp2 vrf Vrf104001
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
 router bgp 4200000010
  bgp router-id 10.0.0.10
  bgp bestpath as-path multipath-relax
