--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -15,6 +15,14 @@ debug zebra nexthop detail
 debug zebra rib detailed
 debug zebra nht detailed
 !
+interface swp31
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
+interface swp32
+ ipv6 nd ra-interval 6
+ no ipv6 nd suppress-ra
+!
 router bgp 4200000010
  bgp router-id 10.0.0.10
  bgp bestpath as-path multipath-relax
