Sonic redis with serialized interface reconfiguration (#81)

--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -1,16 +1,21 @@
 ! The frr version is not rendered since it seems to be optional.
 frr defaults datacenter
 hostname leaf01
-username cumulus nopassword
-service integrated-vtysh-config
+password zebra
+enable password zebra
 !
 log syslog warnings
+log facility local4
 debug bgp updates
 debug bgp nht
 debug bgp update-groups
 debug bgp zebra
+debug zebra events
+debug zebra nexthop detail
+debug zebra rib detailed
+debug zebra nht detailed
 !
-vrf vrf104001
+vrf Vrf104001
  vni 104001
  exit-vrf
 !
@@ -26,11 +31,11 @@ interface swp3
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
-interface swp1 vrf vrf104001
+interface swp1 vrf Vrf104001
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
-interface swp2 vrf vrf104001
+interface swp2 vrf Vrf104001
  ipv6 nd ra-interval 6
  no ipv6 nd suppress-ra
 !
@@ -48,7 +53,7 @@ router bgp 4200000010
  neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOCALS
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -62,11 +67,8 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
-route-map LOCALS permit 10
- match interface lo
-!
-route-map LOCALS permit 12
- match interface vlan4000
+route-map LOOPBACKS permit 10
+ match interface Loopback0
 !
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
@@ -79,7 +81,9 @@ route-map fw-swp3-vni permit 11
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
 !
-router bgp 4200000010 vrf vrf104001
+ip route 0.0.0.0/0 192.168.101.1 nexthop-vrf mgmt
+!
+router bgp 4200000010 vrf Vrf104001
  bgp router-id 10.0.0.10
  bgp bestpath as-path multipath-relax
  neighbor MACHINE peer-group
@@ -91,19 +95,19 @@ router bgp 4200000010 vrf vrf104001
  address-family ipv4 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
-  neighbor MACHINE route-map vrf104001-in in
+  neighbor MACHINE route-map Vrf104001-in in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
  exit-address-family
 !
-# route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
-ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
-ip prefix-list vrf104001-in-prefixes permit 10.240.0.0/12 le 32
-route-map vrf104001-in permit 10
- match ip address prefix-list vrf104001-in-prefixes
+# route-maps for Vrf104001
+ip prefix-list Vrf104001-in-prefixes permit 100.127.131.0/24 le 32
+ip prefix-list Vrf104001-in-prefixes permit 212.17.234.17/32 le 32
+ip prefix-list Vrf104001-in-prefixes permit 10.240.0.0/12 le 32
+route-map Vrf104001-in permit 10
+ match ip address prefix-list Vrf104001-in-prefixes
 !
 line vty
 !
