--- a/cmd/internal/switcher/templates/test_data/lab/cumulus_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/cumulus_frr.conf
@@ -4,7 +4,7 @@ hostname leaf01
 username cumulus nopassword
 service integrated-vtysh-config
 !
-log syslog warnings
+log syslog debugging
 debug bgp updates
 debug bgp nht
 debug bgp update-groups
@@ -48,7 +48,7 @@ router bgp 4200000010
  neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOCALS
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -62,11 +62,8 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
-route-map LOCALS permit 10
+route-map LOOPBACKS permit 10
  match interface lo
-!
-route-map LOCALS permit 12
- match interface vlan4000
 !
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
@@ -78,6 +75,8 @@ route-map fw-swp3-vni permit 11
  match evpn vni 104009
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
+!
+ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
 router bgp 4200000010 vrf vrf104001
  bgp router-id 10.0.0.10
@@ -99,8 +98,6 @@ router bgp 4200000010 vrf vrf104001
  exit-address-family
 !
 # route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
-ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
 ip prefix-list vrf104001-in-prefixes permit 10.240.0.0/12 le 32
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
