--- a/cmd/internal/switcher/templates/test_data/dev/cumulus_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/cumulus_frr.conf
@@ -4,7 +4,7 @@ hostname leaf01
 username cumulus nopassword
 service integrated-vtysh-config
 !
-log syslog debugging
+log syslog warnings
 debug bgp updates
 debug bgp nht
 debug bgp update-groups
@@ -76,7 +76,7 @@ route-map fw-swp3-vni permit 11
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
 !
-ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
+ip route 0.0.0.0/0 192.168.101.1 nexthop-vrf mgmt
 !
 router bgp 4200000010 vrf vrf104001
  bgp router-id 10.0.0.10
@@ -98,7 +98,9 @@ router bgp 4200000010 vrf vrf104001
  exit-address-family
 !
 # route-maps for vrf104001
-ip prefix-list vrf104001-in-prefixes permit 10.244.0.0/16 le 32
+ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
+ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
+ip prefix-list vrf104001-in-prefixes permit 10.240.0.0/12 le 32
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
 !
