--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -53,7 +53,7 @@ router bgp 4200000010
  neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOOPBACKS
+  redistribute connected route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -67,8 +67,9 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-vni out
  exit-address-family
 !
-route-map LOOPBACKS permit 10
- match interface Loopback0
+route-map DENY_MGMT deny 10
+  match interface eth0
+route-map DENY_MGMT permit 20
 !
 # route-maps for firewall@swp3
 ip prefix-list fw-swp3-in-prefixes permit 10.0.2.1/32 le 32
