--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -36,7 +36,7 @@ router bgp 4200000010
  neighbor FIREWALL timers 2 8
  !
  address-family ipv4 unicast
-  redistribute connected route-map LOOPBACKS
+  redistribute connected route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
  exit-address-family
  !
@@ -48,8 +48,9 @@ router bgp 4200000010
   neighbor FIREWALL allowas-in 2
  exit-address-family
 !
-route-map LOOPBACKS permit 10
- match interface Loopback0
+route-map DENY_MGMT deny 10
+  match interface eth0
+route-map DENY_MGMT permit 20
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
