--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -58,6 +58,12 @@ router bgp 4200000010
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
+ address-family ipv6 unicast
+  redistribute connected route-map DENY_MGMT
+  neighbor FIREWALL allowas-in 2
+  neighbor swp3 route-map fw-swp3-in in
+ exit-address-family
+ !
  address-family l2vpn evpn
   advertise-all-vni
   neighbor FABRIC activate
@@ -97,6 +103,12 @@ router bgp 4200000010 vrf Vrf104001
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
   neighbor MACHINE route-map Vrf104001-in in
+ exit-address-family
+ !
+ address-family ipv6 unicast
+  redistribute connected
+  neighbor MACHINE maximum-prefix 24000
+  neighbor MACHINE route-map Vrf104001-in6 in
  exit-address-family
  !
  address-family l2vpn evpn
