Activate ipv6 addressfamily

--- a/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
@@ -96,6 +96,7 @@ router bgp 4200000010 vrf vrf104001
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
+  advertise ipv6 unicast
  exit-address-family
 !
 # route-maps for vrf104001
