--- a/cmd/internal/switcher/templates/test_data/notenants/cumulus_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/cumulus_frr.conf
@@ -38,6 +38,7 @@ router bgp 4200000010
  address-family ipv6 unicast
   redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
+  neighbor FIREWALL activate
  exit-address-family
  !
  address-family l2vpn evpn
