--- a/cmd/internal/switcher/templates/test_data/lab/cumulus_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/cumulus_frr.conf
@@ -56,6 +56,7 @@ router bgp 4200000010
  address-family ipv6 unicast
   redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
+  neighbor FIREWALL activate
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
@@ -102,11 +103,13 @@ router bgp 4200000010 vrf vrf104001
  address-family ipv6 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
+  neighbor MACHINE activate
   neighbor MACHINE route-map vrf104001-in6 in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
+  advertise ipv6 unicast
  exit-address-family
 !
 # route-maps for vrf104001
