--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -61,6 +61,7 @@ router bgp 4200000010
  address-family ipv6 unicast
   redistribute connected route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
+  neighbor FIREWALL activate
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
  !
@@ -108,11 +109,13 @@ router bgp 4200000010 vrf Vrf104001
  address-family ipv6 unicast
   redistribute connected
   neighbor MACHINE maximum-prefix 24000
+  neighbor MACHINE activate
   neighbor MACHINE route-map Vrf104001-in6 in
  exit-address-family
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
+  advertise ipv6 unicast
  exit-address-family
 !
 # route-maps for Vrf104001
