--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -43,6 +43,7 @@ router bgp 4200000010
  address-family ipv6 unicast
   redistribute connected route-map DENY_MGMT
   neighbor FIREWALL allowas-in 2
+  neighbor FIREWALL activate
  exit-address-family
  !
  address-family l2vpn evpn
