--- a/cmd/internal/switcher/templates/test_data/dev/conf.yaml
+++ b/cmd/internal/switcher/templates/test_data/dev/conf.yaml
@@ -4,6 +4,9 @@ loglevel: warnings
 loopback: 10.0.0.10
 asn: 4200000010
 metalcorecidr: 10.255.255.2/24
+podcidrs:
+  - "10.240.0.0/12"
+  - "fd00:10::/64"
 ports:
   eth0:
     addresscidr: 192.168.101.12/24
