--- a/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
@@ -96,14 +96,19 @@ router bgp 4200000010 vrf vrf104001
  !
  address-family l2vpn evpn
   advertise ipv4 unicast
+  advertise ipv6 unicast
  exit-address-family
 !
 # route-maps for vrf104001
+ip prefix-list vrf104001-in-prefixes permit 10.240.0.0/12 le 32
 ip prefix-list vrf104001-in-prefixes permit 100.127.131.0/24 le 32
 ip prefix-list vrf104001-in-prefixes permit 212.17.234.17/32 le 32
-ip prefix-list vrf104001-in-prefixes permit 10.240.0.0/12 le 32
+ip prefix-list vrf104001-in6-prefixes permit 2001:db8:3::1/128 le 128
+ip prefix-list vrf104001-in6-prefixes permit fd00:10::/64 le 128
 route-map vrf104001-in permit 10
  match ip address prefix-list vrf104001-in-prefixes
+route-map vrf104001-in6 permit 10
+ match ipv6 address prefix-list vrf104001-in6-prefixes
 !
 line vty
 !
