--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -63,5 +63,11 @@ route-map DENY_MGMT permit 20
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
 !
+route-map RM_SET_SRC permit 10
+ set src 10.0.0.10
+exit
+!
+ip protocol bgp route-map RM_SET_SRC
+!
 line vty
 !
