--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -28,7 +28,7 @@ jobs:
         password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
 
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Setup Go
       uses: actions/setup-go@v5
@@ -40,9 +40,9 @@ jobs:
       run: sudo apt-get install -y libpcap-dev
 
     - name: Lint
-      uses: golangci/golangci-lint-action@v6
+      uses: golangci/golangci-lint-action@v8
       with:
-        args: --build-tags client -p bugs -p unused --timeout=3m
+        args: --build-tags client --timeout=3m
 
     - name: Make tag
       run: |
