add a deny rule for vni filtering at the end of the rm

--- a/cmd/internal/switcher/templates/test_data/dev/cumulus_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/cumulus_frr.conf
@@ -82,6 +82,7 @@ route-map fw-swp3-vni permit 11
  match evpn vni 104009
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
+route-map fw-swp3-vni deny 13
 !
 ip route 0.0.0.0/0 192.168.101.1 nexthop-vrf mgmt
 !
