--- a/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/customtpl/frr.conf
@@ -78,6 +78,7 @@ route-map fw-swp3-vni permit 11
  match evpn vni 104009
 route-map fw-swp3-vni permit 12
  match evpn vni 104010
+route-map fw-swp3-vni deny 13
 !
 router bgp 4200000010 vrf vrf104001
  bgp router-id 10.0.0.10
