--- a/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/dev/sonic_frr.conf
@@ -55,6 +55,7 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -133,6 +134,10 @@ route-map Vrf104001-in permit 10
  match ip address prefix-list Vrf104001-in-prefixes
 route-map Vrf104001-in6 permit 10
  match ipv6 address prefix-list Vrf104001-in6-prefixes
+!
+route-map LOOPBACKS permit 10
+ match interface Loopback0
+exit
 !
 route-map RM_SET_SRC permit 10
  set src 10.0.0.10
