--- a/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/notenants/sonic_frr.conf
@@ -38,6 +38,7 @@ router bgp 4200000010
  !
  address-family ipv4 unicast
   redistribute connected route-map DENY_MGMT
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
  exit-address-family
  !
@@ -62,6 +63,10 @@ route-map DENY_MGMT deny 10
 route-map DENY_MGMT permit 20
 !
 ip route 0.0.0.0/0 192.168.0.254 nexthop-vrf mgmt
+!
+route-map LOOPBACKS permit 10
+ match interface Loopback0
+exit
 !
 route-map RM_SET_SRC permit 10
  set src 10.0.0.10
