--- a/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
+++ b/cmd/internal/switcher/templates/test_data/lab/sonic_frr.conf
@@ -54,7 +54,7 @@ router bgp 4200000010
  neighbor swp3 interface peer-group FIREWALL
  !
  address-family ipv4 unicast
-  redistribute connected route-map DENY_MGMT
+  redistribute connected route-map LOOPBACKS
   neighbor FIREWALL allowas-in 2
   neighbor swp3 route-map fw-swp3-in in
  exit-address-family
@@ -117,6 +117,10 @@ router bgp 4200000010 vrf Vrf104001
 ip prefix-list Vrf104001-in-prefixes permit 10.240.0.0/12 le 32
 route-map Vrf104001-in permit 10
  match ip address prefix-list Vrf104001-in-prefixes
+!
+route-map LOOPBACKS permit 10
+ match interface Loopback0
+exit
 !
 route-map RM_SET_SRC permit 10
  set src 10.0.0.10
