build with go 1.25.1

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,7 +33,8 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version-file: 'go.mod'
+        go-version: 1.25.1
+        check-latest: true
         cache: false
 
     - name: Install libpcap-dev
