--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version: 1.25.1
+        go-version-file: 'go.mod'
         cache: false
 
     - name: Install libpcap-dev
